[gd_scene load_steps=12 format=2]

[ext_resource path="res://Cenas/imgselect/sasuke.png" type="Texture" id=1]
[ext_resource path="res://Cenas/imgselect/Scripts_select/tela_selecao.gd" type="Script" id=2]
[ext_resource path="res://Cenas/imgselect/naruto.png" type="Texture" id=3]
[ext_resource path="res://Cenas/imgselect/sakura.png" type="Texture" id=4]
[ext_resource path="res://Cenas/imgselect/test.png" type="Texture" id=5]
[ext_resource path="res://Cenas/imgselect/iniciar.gd" type="Script" id=6]
[ext_resource path="res://Cenas/imgselect/Iniciar.png" type="Texture" id=7]
[ext_resource path="res://Cenas/imgselect/Scripts_select/sair.gd" type="Script" id=8]
[ext_resource path="res://Cenas/imgselect/sair.png" type="Texture" id=9]
[ext_resource path="res://Cenas/imgselect/Ajuda.png" type="Texture" id=10]
[ext_resource path="res://Cenas/imgselect/Scripts_select/ajuda.gd" type="Script" id=12]

[node name="Node2D" type="Node2D"]
position = Vector2( 0, -2 )
script = ExtResource( 2 )

[node name="select" type="Sprite" parent="."]
position = Vector2( 159.451, 97.2882 )
scale = Vector2( 0.279031, 0.451351 )
texture = ExtResource( 5 )

[node name="naruto" type="Sprite" parent="."]
position = Vector2( 51.5376, 60.3424 )
scale = Vector2( 0.278807, 0.458051 )
texture = ExtResource( 3 )

[node name="sasuke" type="Sprite" parent="."]
position = Vector2( 107.849, 61.1636 )
scale = Vector2( 0.282692, 0.459366 )
texture = ExtResource( 4 )

[node name="sakura" type="Sprite" parent="."]
position = Vector2( 51.2795, 92.244 )
scale = Vector2( 0.282726, 0.457116 )
texture = ExtResource( 1 )

[node name="iniciar" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 152.447
margin_top = 101.716
margin_right = 166.447
margin_bottom = 121.716
focus_mode = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="play" type="Sprite" parent="iniciar"]
position = Vector2( 6.29468, 9.92346 )
scale = Vector2( 0.138751, 0.13687 )
texture = ExtResource( 7 )

[node name="sair" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 153.578
margin_top = 158.141
margin_right = 166.578
margin_bottom = 178.141
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="close" type="Sprite" parent="sair"]
position = Vector2( 5.93555, 9.22925 )
scale = Vector2( 0.135293, 0.135293 )
texture = ExtResource( 9 )

[node name="ajuda" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 152.03
margin_top = 127.178
margin_right = 165.03
margin_bottom = 147.178
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="Sprite" parent="ajuda"]
position = Vector2( 6.64178, 13.1911 )
scale = Vector2( 0.137769, 0.137769 )
texture = ExtResource( 10 )
[connection signal="mouse_entered" from="iniciar" to="iniciar" method="_on_iniciar_mouse_entered"]
[connection signal="mouse_exited" from="iniciar" to="iniciar" method="_on_iniciar_mouse_exited"]
[connection signal="pressed" from="iniciar" to="iniciar" method="_on_iniciar_pressed"]
[connection signal="mouse_entered" from="sair" to="sair" method="_on_sair_mouse_entered"]
[connection signal="mouse_exited" from="sair" to="sair" method="_on_sair_mouse_exited"]
[connection signal="pressed" from="sair" to="sair" method="_on_sair_pressed"]
[connection signal="mouse_entered" from="ajuda" to="ajuda" method="_on_ajuda_mouse_entered"]
[connection signal="mouse_exited" from="ajuda" to="ajuda" method="_on_ajuda_mouse_exited"]
[connection signal="pressed" from="ajuda" to="ajuda" method="_on_ajuda_pressed"]
